--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.26.1",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.0.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.50.0",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
